--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Using Local Font -->
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" /> -->
 
   <title>LG SW Architect 2022 Team 4</title>
   <meta name="description"
